--- a/withpull1bin.ipynb
+++ b/withpull1bin.ipynb
@@ -40,20 +40,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_model(s,b,bup,bdn):\n",
+    "def make_model(s, b, bup, bdn):\n",
     "    m = {\n",
-    "        'channels': [{'name': 'singlechannel',\n",
-    "        'samples': [{'name': 'signal',\n",
-    "            'data': [s],\n",
-    "            'modifiers': [{'name': 'mu', 'type': 'normfactor', 'data': None}]},\n",
-    "            {'name': 'background',\n",
-    "            'data': [b],\n",
-    "            'modifiers': [\n",
-    "                {'name': 'bkguncrt',\n",
-    "            'type': 'histosys',\n",
-    "            'data': {'hi_data': [bup], 'lo_data': [bdn]}\n",
-    "            }]}]}]\n",
-    "        }\n",
+    "        \"channels\": [\n",
+    "            {\n",
+    "                \"name\": \"singlechannel\",\n",
+    "                \"samples\": [\n",
+    "                    {\n",
+    "                        \"name\": \"signal\",\n",
+    "                        \"data\": [s],\n",
+    "                        \"modifiers\": [\n",
+    "                            {\"name\": \"mu\", \"type\": \"normfactor\", \"data\": None}\n",
+    "                        ],\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"name\": \"background\",\n",
+    "                        \"data\": [b],\n",
+    "                        \"modifiers\": [\n",
+    "                            {\n",
+    "                                \"name\": \"bkguncrt\",\n",
+    "                                \"type\": \"histosys\",\n",
+    "                                \"data\": {\"hi_data\": [bup], \"lo_data\": [bdn]},\n",
+    "                            }\n",
+    "                        ],\n",
+    "                    },\n",
+    "                ],\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
     "    return pyhf.Model(m)"
    ]
   },
@@ -64,16 +78,18 @@
    "outputs": [],
    "source": [
     "class GaussianModel:\n",
-    "    def __init__(self,cov):\n",
+    "    def __init__(self, cov):\n",
     "        self.cov = cov\n",
-    "    def logpdf(self,p,d):\n",
-    "        return jax.scipy.stats.multivariate_normal.logpdf(d,p,self.cov).reshape(1)\n",
+    "\n",
+    "    def logpdf(self, p, d):\n",
+    "        return jax.scipy.stats.multivariate_normal.logpdf(d, p, self.cov).reshape(1)\n",
     "\n",
     "    def sample(self, key, at, shape):\n",
     "        return jax.random.multivariate_normal(key, at, self.cov, shape=shape)\n",
     "\n",
+    "\n",
     "class BestFit:\n",
-    "    def __init__(self,bestfit):\n",
+    "    def __init__(self, bestfit):\n",
     "        self.bestfit = bestfit"
    ]
   },
@@ -83,49 +99,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_model(m,d,reference):\n",
-    "    grid = xi,yi = np.mgrid[0:4:51j,-2:2:51j]\n",
-    "    X = np.swapaxes(grid,0,-1).reshape(-1,2)\n",
-    "    r = jax.vmap(m.logpdf, in_axes = (0,None))(X,d)\n",
-    "    zi = -2*(r[:,0].reshape(51,51).T - m.logpdf(reference,d))\n",
-    "    return xi,yi,zi\n",
+    "def evaluate_model(m, d, reference):\n",
+    "    grid = xi, yi = np.mgrid[0:4:51j, -2:2:51j]\n",
+    "    X = np.swapaxes(grid, 0, -1).reshape(-1, 2)\n",
+    "    r = jax.vmap(m.logpdf, in_axes=(0, None))(X, d)\n",
+    "    zi = -2 * (r[:, 0].reshape(51, 51).T - m.logpdf(reference, d))\n",
+    "    return xi, yi, zi\n",
     "\n",
-    "def gaussian_approx(m,at):\n",
-    "    mcov = jax.numpy.linalg.inv(jax.hessian(lambda p: -m.logpdf(p,d))(at))[0]\n",
+    "\n",
+    "def gaussian_approx(m, at):\n",
+    "    mcov = jax.numpy.linalg.inv(jax.hessian(lambda p: -m.logpdf(p, d))(at))[0]\n",
     "    ggm = GaussianModel(mcov)\n",
     "    return ggm\n",
     "\n",
-    "def plot_model(axarr, m,d,fr = None,lines = [1,2,4]):\n",
+    "\n",
+    "def plot_model(axarr, m, d, fr=None, lines=[1, 2, 4]):\n",
     "    import numpy as np\n",
     "    import matplotlib.pyplot as plt\n",
     "    import jax\n",
     "\n",
-    "    fr, ggm, metrics = get_metrics(m,d)\n",
+    "    fr, ggm, metrics = get_metrics(m, d)\n",
     "\n",
-    "    mcov = jax.numpy.linalg.inv(jax.hessian(lambda p: -m.logpdf(p,d))(fr.bestfit))[0]\n",
-    "    \n",
-    "    dpoi,dnp = np.sqrt(np.diag(mcov))\n",
-    "    print(dpoi,dnp)\n",
-    "    \n",
+    "    mcov = jax.numpy.linalg.inv(jax.hessian(lambda p: -m.logpdf(p, d))(fr.bestfit))[0]\n",
+    "\n",
+    "    dpoi, dnp = np.sqrt(np.diag(mcov))\n",
+    "    print(dpoi, dnp)\n",
+    "\n",
     "    ax = axarr[0]\n",
-    "    xi,yi,zi = evaluate_model(m,d,fr.bestfit)\n",
-    "    ax.contour(xi,yi,zi, levels = lines, colors = 'k')\n",
+    "    xi, yi, zi = evaluate_model(m, d, fr.bestfit)\n",
+    "    ax.contour(xi, yi, zi, levels=lines, colors=\"k\")\n",
     "\n",
-    "    xi,yi,zi = evaluate_model(ggm,fr.bestfit,fr.bestfit)\n",
-    "    ax.contour(xi,yi,zi, levels = lines, colors = 'r')\n",
+    "    xi, yi, zi = evaluate_model(ggm, fr.bestfit, fr.bestfit)\n",
+    "    ax.contour(xi, yi, zi, levels=lines, colors=\"r\")\n",
     "\n",
-    "    ax.scatter(fr.bestfit[0],fr.bestfit[1], c = 'r',)\n",
-    "    ax.errorbar(fr.bestfit[0],fr.bestfit[1], yerr=[dnp], xerr=[dpoi], c = 'r')\n",
-    "    ax.set_xlim(xi.min()-0.2,xi.max())\n",
-    "\n",
+    "    ax.scatter(\n",
+    "        fr.bestfit[0],\n",
+    "        fr.bestfit[1],\n",
+    "        c=\"r\",\n",
+    "    )\n",
+    "    ax.errorbar(fr.bestfit[0], fr.bestfit[1], yerr=[dnp], xerr=[dpoi], c=\"r\")\n",
+    "    ax.set_xlim(xi.min() - 0.2, xi.max())\n",
     "\n",
     "    ax = axarr[1]\n",
-    "    ax.bar(range(4),metrics, alpha = 0.2)\n",
-    "    ax.set_ylim(.005,10)\n",
-    "    ax.set_yscale('log')\n",
+    "    ax.bar(range(4), metrics, alpha=0.2)\n",
+    "    ax.set_ylim(0.005, 10)\n",
+    "    ax.set_yscale(\"log\")\n",
     "    ax.grid()\n",
     "    ax.set_xticks(range(4))\n",
-    "    ax.set_xticklabels(['cls','gaussian','s_POI','(s_NP-1)^2'])\n",
+    "    ax.set_xticklabels([\"cls\", \"gaussian\", \"s_POI\", \"(s_NP-1)^2\"])\n",
     "    return metrics"
    ]
   },
@@ -135,28 +156,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_gaussianity_metrics(m,at):\n",
-    "    GA = gaussian_approx(m, at = at)\n",
-    "    samps = GA.sample(key = key, at = at, shape = (100,))\n",
-    "    m_nll = -jax.vmap(lambda p,d: -(m.logpdf(p,d)-m.logpdf(at,d)), in_axes=(0,None))(samps,d)[:,0]\n",
-    "    ga_nll = -jax.vmap(lambda p,d: -(GA.logpdf(p,d)-GA.logpdf(at,d)), in_axes=(0,None))(samps,at)[:,0]\n",
-    "    diffs = (m_nll-ga_nll)**2\n",
+    "def get_gaussianity_metrics(m, at):\n",
+    "    GA = gaussian_approx(m, at=at)\n",
+    "    samps = GA.sample(key=key, at=at, shape=(100,))\n",
+    "    m_nll = -jax.vmap(\n",
+    "        lambda p, d: -(m.logpdf(p, d) - m.logpdf(at, d)), in_axes=(0, None)\n",
+    "    )(samps, d)[:, 0]\n",
+    "    ga_nll = -jax.vmap(\n",
+    "        lambda p, d: -(GA.logpdf(p, d) - GA.logpdf(at, d)), in_axes=(0, None)\n",
+    "    )(samps, at)[:, 0]\n",
+    "    diffs = (m_nll - ga_nll) ** 2\n",
     "    diffs = diffs[np.isfinite(diffs)]\n",
-    "    return GA,diffs.mean()\n",
-    "    \n",
-    "def get_metrics(m,d):\n",
-    "    import jax\n",
-    "    pyhf.set_backend('jax', pyhf.optimize.scipy_optimizer())\n",
-    "    widths = np.diag(np.sqrt(jax.numpy.linalg.inv(jax.hessian(lambda p: -m.logpdf(p,d)[0])(np.array([0.0,0.0])))))\n",
-    "    cls_obs = pyhf.infer.hypotest(1.0,d,m, init_pars = [0.0,0.0])\n",
+    "    return GA, diffs.mean()\n",
     "\n",
-    "    fr = BestFit(pyhf.infer.mle.fit(d,m))\n",
-    "    ga_model, gaussianity = get_gaussianity_metrics(m,at = fr.bestfit)\n",
+    "\n",
+    "def get_metrics(m, d):\n",
+    "    import jax\n",
+    "\n",
+    "    pyhf.set_backend(\"jax\", pyhf.optimize.scipy_optimizer())\n",
+    "    widths = np.diag(\n",
+    "        np.sqrt(\n",
+    "            jax.numpy.linalg.inv(\n",
+    "                jax.hessian(lambda p: -m.logpdf(p, d)[0])(np.array([0.0, 0.0]))\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    "    cls_obs = pyhf.infer.hypotest(1.0, d, m, init_pars=[0.0, 0.0])\n",
+    "\n",
+    "    fr = BestFit(pyhf.infer.mle.fit(d, m))\n",
+    "    ga_model, gaussianity = get_gaussianity_metrics(m, at=fr.bestfit)\n",
     "\n",
     "    widths = np.array(widths)\n",
-    "    widths[1] = (widths[1] - 1.0)**2\n",
-    "    a = np.array([cls_obs,gaussianity])\n",
-    "    return fr, ga_model, np.concatenate([a,widths])    "
+    "    widths[1] = (widths[1] - 1.0) ** 2\n",
+    "    a = np.array([cls_obs, gaussianity])\n",
+    "    return fr, ga_model, np.concatenate([a, widths])"
    ]
   },
   {
@@ -189,26 +222,26 @@
     }
    ],
    "source": [
-    "f,axarr = plt.subplots(2,4)\n",
+    "f, axarr = plt.subplots(2, 4)\n",
     "\n",
-    "m = pyhf.simplemodels.correlated_background([10,0],[50,50],[30,30],[30,30])\n",
-    "d = [50,50]+m.config.auxdata\n",
-    "metrics = plot_model(axarr[:,0],m,d,fr, lines = [1,2,4])\n",
+    "m = pyhf.simplemodels.correlated_background([10, 0], [50, 50], [30, 30], [30, 30])\n",
+    "d = [50, 50] + m.config.auxdata\n",
+    "metrics = plot_model(axarr[:, 0], m, d, fr, lines=[1, 2, 4])\n",
     "\n",
     "\n",
-    "m = pyhf.simplemodels.correlated_background([10,0],[50,50],[50,40],[50,60])\n",
-    "d = [50,50]+m.config.auxdata\n",
-    "metrics = plot_model(axarr[:,1],m,d,fr, lines = [1,2,4])\n",
+    "m = pyhf.simplemodels.correlated_background([10, 0], [50, 50], [50, 40], [50, 60])\n",
+    "d = [50, 50] + m.config.auxdata\n",
+    "metrics = plot_model(axarr[:, 1], m, d, fr, lines=[1, 2, 4])\n",
     "\n",
-    "m = pyhf.simplemodels.correlated_background([4,4],[50,50],[60,60],[40,40])\n",
-    "d = [50,50]+m.config.auxdata\n",
-    "metrics = plot_model(axarr[:,2],m,d,fr, lines = [1,2,4])\n",
+    "m = pyhf.simplemodels.correlated_background([4, 4], [50, 50], [60, 60], [40, 40])\n",
+    "d = [50, 50] + m.config.auxdata\n",
+    "metrics = plot_model(axarr[:, 2], m, d, fr, lines=[1, 2, 4])\n",
     "\n",
-    "m = pyhf.simplemodels.correlated_background([10,0],[50,50],[50,53],[50,47])\n",
-    "d = [50,50]+m.config.auxdata\n",
-    "metrics = plot_model(axarr[:,3],m,d,fr, lines = [1,2,4])\n",
+    "m = pyhf.simplemodels.correlated_background([10, 0], [50, 50], [50, 53], [50, 47])\n",
+    "d = [50, 50] + m.config.auxdata\n",
+    "metrics = plot_model(axarr[:, 3], m, d, fr, lines=[1, 2, 4])\n",
     "\n",
-    "f.set_size_inches(15,4)\n",
+    "f.set_size_inches(15, 4)\n",
     "f.set_tight_layout(True)"
    ]
   },
@@ -239,18 +272,22 @@
     }
    ],
    "source": [
-    "f,axarr = plt.subplots(2,2)\n",
+    "f, axarr = plt.subplots(2, 2)\n",
     "\n",
-    "m = pyhf.simplemodels.correlated_background([1,1,3,4],[20,15,5,1],[15,15,5,1],[15,20,5,1])\n",
-    "d = [20,15,5,1]+m.config.auxdata\n",
-    "metrics = plot_model(axarr[:,0],m,d,fr, lines = [1,2,4])\n",
+    "m = pyhf.simplemodels.correlated_background(\n",
+    "    [1, 1, 3, 4], [20, 15, 5, 1], [15, 15, 5, 1], [15, 20, 5, 1]\n",
+    ")\n",
+    "d = [20, 15, 5, 1] + m.config.auxdata\n",
+    "metrics = plot_model(axarr[:, 0], m, d, fr, lines=[1, 2, 4])\n",
     "\n",
     "\n",
-    "m = pyhf.simplemodels.correlated_background([1,1,3,4],[20,15,5,1],[20,15,5,1],[20,15,5,1])\n",
-    "d = [20,15,5,1]+m.config.auxdata\n",
-    "metrics = plot_model(axarr[:,1],m,d,fr, lines = [1,2,4])\n",
+    "m = pyhf.simplemodels.correlated_background(\n",
+    "    [1, 1, 3, 4], [20, 15, 5, 1], [20, 15, 5, 1], [20, 15, 5, 1]\n",
+    ")\n",
+    "d = [20, 15, 5, 1] + m.config.auxdata\n",
+    "metrics = plot_model(axarr[:, 1], m, d, fr, lines=[1, 2, 4])\n",
     "\n",
-    "f.set_size_inches(15,4)\n",
+    "f.set_size_inches(15, 4)\n",
     "f.set_tight_layout(True)"
    ]
   },
@@ -283,11 +320,11 @@
     }
    ],
    "source": [
-    "counts = np.array([[1,1,3,4],[20,15,5,1],[20,15,5,1],[15,20,5,1]])\n",
-    "plt.bar(np.arange(4),counts[0], width=0.1)\n",
-    "plt.bar(np.arange(4)+0.1,counts[1], width=0.1)\n",
-    "plt.bar(np.arange(4)+0.2,counts[2], width=0.1)\n",
-    "plt.bar(np.arange(4)+0.3,counts[3], width=0.1)"
+    "counts = np.array([[1, 1, 3, 4], [20, 15, 5, 1], [20, 15, 5, 1], [15, 20, 5, 1]])\n",
+    "plt.bar(np.arange(4), counts[0], width=0.1)\n",
+    "plt.bar(np.arange(4) + 0.1, counts[1], width=0.1)\n",
+    "plt.bar(np.arange(4) + 0.2, counts[2], width=0.1)\n",
+    "plt.bar(np.arange(4) + 0.3, counts[3], width=0.1)"
    ]
   },
   {
