--- a/example-diffable.ipynb
+++ b/example-diffable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -10,46 +10,44 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Looking in links: https://storage.googleapis.com/jax-releases/jax_releases.html\n",
-      "Collecting git+http://github.com/scikit-hep/pyhf.git@diffable_json (from -r requirements.txt (line 5))\n",
-      "  Cloning http://github.com/scikit-hep/pyhf.git (to revision diffable_json) to /tmp/pip-req-build-gl5t8x8n\n",
-      "  Running command git clone -q http://github.com/scikit-hep/pyhf.git /tmp/pip-req-build-gl5t8x8n\n",
-      "  Running command git checkout -b diffable_json --track origin/diffable_json\n",
-      "  Switched to a new branch 'diffable_json'\n",
-      "  Branch 'diffable_json' set up to track remote branch 'diffable_json' from 'origin'.\n",
+      "Collecting git+http://github.com/gradhep/relaxed.git\n",
+      "  Cloning http://github.com/gradhep/relaxed.git to /tmp/pip-req-build-8d0jk9vp\n",
+      "  Running command git clone -q http://github.com/gradhep/relaxed.git /tmp/pip-req-build-8d0jk9vp\n",
       "  Installing build dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting jax==0.1.71\n",
-      "  Using cached jax-0.1.71-py3-none-any.whl\n",
-      "Collecting jaxlib==0.1.50\n",
-      "  Using cached https://storage.googleapis.com/jax-releases/nocuda/jaxlib-0.1.50-cp38-none-manylinux2010_x86_64.whl (32.5 MB)\n",
-      "Requirement already satisfied: relaxed in /home/jovyan/.local/lib/python3.8/site-packages (from -r requirements.txt (line 4)) (0.0.1)\n",
-      "Requirement already satisfied: jsonschema>=3.2.0 in /usr/local/lib/python3.8/dist-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (3.2.0)\n",
-      "Requirement already satisfied: jsonpatch in /home/jovyan/.local/lib/python3.8/site-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (1.32)\n",
-      "Requirement already satisfied: pyyaml in /usr/local/lib/python3.8/dist-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (5.4.1)\n",
-      "Requirement already satisfied: click>=6.0 in /usr/local/lib/python3.8/dist-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (7.1.2)\n",
-      "Requirement already satisfied: scipy>=1.4.0 in /usr/local/lib/python3.8/dist-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (1.7.0)\n",
-      "Requirement already satisfied: tqdm in /home/jovyan/.local/lib/python3.8/site-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (4.62.3)\n",
-      "Requirement already satisfied: absl-py in /usr/local/lib/python3.8/dist-packages (from jax==0.1.71->-r requirements.txt (line 2)) (0.10.0)\n",
-      "Requirement already satisfied: numpy>=1.12 in /usr/local/lib/python3.8/dist-packages (from jax==0.1.71->-r requirements.txt (line 2)) (1.21.0)\n",
-      "Requirement already satisfied: opt-einsum in /home/jovyan/.local/lib/python3.8/site-packages (from jax==0.1.71->-r requirements.txt (line 2)) (3.3.0)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (0.17.3)\n",
-      "Requirement already satisfied: setuptools in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (57.0.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (21.2.0)\n",
-      "Requirement already satisfied: six>=1.11.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (1.15.0)\n",
-      "Requirement already satisfied: jsonpointer>=1.9 in /home/jovyan/.local/lib/python3.8/site-packages (from jsonpatch->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (2.1)\n",
-      "Installing collected packages: jaxlib, jax\n",
-      "  Attempting uninstall: jaxlib\n",
-      "    Found existing installation: jaxlib 0.1.73\n",
-      "    Uninstalling jaxlib-0.1.73:\n",
-      "      Successfully uninstalled jaxlib-0.1.73\n",
-      "  Attempting uninstall: jax\n",
-      "    Found existing installation: jax 0.2.24\n",
-      "    Uninstalling jax-0.2.24:\n",
-      "      Successfully uninstalled jax-0.2.24\n",
-      "Successfully installed jax-0.1.71 jaxlib-0.1.50\n",
+      "\u001b[?25hRequirement already satisfied: pyhf in /home/jovyan/.local/lib/python3.8/site-packages (from relaxed==0.0.7.dev3+g10c271b) (0.5.1.dev11)\n",
+      "Requirement already satisfied: jax-fixedpoint==0.0.4 in /home/jovyan/.local/lib/python3.8/site-packages (from relaxed==0.0.7.dev3+g10c271b) (0.0.4)\n",
+      "Requirement already satisfied: jax==0.1.71 in /home/jovyan/.local/lib/python3.8/site-packages (from relaxed==0.0.7.dev3+g10c271b) (0.1.71)\n",
+      "Requirement already satisfied: immutables in /home/jovyan/.local/lib/python3.8/site-packages (from relaxed==0.0.7.dev3+g10c271b) (0.16)\n",
+      "Requirement already satisfied: jaxlib==0.1.50 in /home/jovyan/.local/lib/python3.8/site-packages (from relaxed==0.0.7.dev3+g10c271b) (0.1.50)\n",
+      "Requirement already satisfied: absl-py in /usr/local/lib/python3.8/dist-packages (from jax==0.1.71->relaxed==0.0.7.dev3+g10c271b) (0.10.0)\n",
+      "Requirement already satisfied: numpy>=1.12 in /usr/local/lib/python3.8/dist-packages (from jax==0.1.71->relaxed==0.0.7.dev3+g10c271b) (1.21.0)\n",
+      "Requirement already satisfied: opt-einsum in /home/jovyan/.local/lib/python3.8/site-packages (from jax==0.1.71->relaxed==0.0.7.dev3+g10c271b) (3.3.0)\n",
+      "Requirement already satisfied: hypothesis in /home/jovyan/.local/lib/python3.8/site-packages (from jax-fixedpoint==0.0.4->relaxed==0.0.7.dev3+g10c271b) (6.23.2)\n",
+      "Requirement already satisfied: scipy in /usr/local/lib/python3.8/dist-packages (from jax-fixedpoint==0.0.4->relaxed==0.0.7.dev3+g10c271b) (1.7.0)\n",
+      "Requirement already satisfied: six in /usr/local/lib/python3.8/dist-packages (from absl-py->jax==0.1.71->relaxed==0.0.7.dev3+g10c271b) (1.15.0)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in /usr/local/lib/python3.8/dist-packages (from hypothesis->jax-fixedpoint==0.0.4->relaxed==0.0.7.dev3+g10c271b) (21.2.0)\n",
+      "Requirement already satisfied: sortedcontainers<3.0.0,>=2.1.0 in /home/jovyan/.local/lib/python3.8/site-packages (from hypothesis->jax-fixedpoint==0.0.4->relaxed==0.0.7.dev3+g10c271b) (2.4.0)\n",
+      "Requirement already satisfied: jsonschema>=3.2.0 in /usr/local/lib/python3.8/dist-packages (from pyhf->relaxed==0.0.7.dev3+g10c271b) (3.2.0)\n",
+      "Requirement already satisfied: click>=6.0 in /usr/local/lib/python3.8/dist-packages (from pyhf->relaxed==0.0.7.dev3+g10c271b) (7.1.2)\n",
+      "Requirement already satisfied: tqdm in /home/jovyan/.local/lib/python3.8/site-packages (from pyhf->relaxed==0.0.7.dev3+g10c271b) (4.62.3)\n",
+      "Requirement already satisfied: jsonpatch in /home/jovyan/.local/lib/python3.8/site-packages (from pyhf->relaxed==0.0.7.dev3+g10c271b) (1.32)\n",
+      "Requirement already satisfied: pyyaml in /usr/local/lib/python3.8/dist-packages (from pyhf->relaxed==0.0.7.dev3+g10c271b) (5.4.1)\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf->relaxed==0.0.7.dev3+g10c271b) (0.17.3)\n",
+      "Requirement already satisfied: setuptools in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf->relaxed==0.0.7.dev3+g10c271b) (57.0.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in /home/jovyan/.local/lib/python3.8/site-packages (from jsonpatch->pyhf->relaxed==0.0.7.dev3+g10c271b) (2.1)\n",
+      "Building wheels for collected packages: relaxed\n",
+      "  Building wheel for relaxed (PEP 517) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for relaxed: filename=relaxed-0.0.7.dev3+g10c271b-py3-none-any.whl size=11791 sha256=2f349af29c9dcfe33fb88ba8e1712a797e15912e90e476369dcd050a16c0aaea\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-_moyvpsk/wheels/5f/8b/b6/ee38b54939f873e1c0e7c516d2f63f5d537ea92a9c95d046ae\n",
+      "Successfully built relaxed\n",
+      "Installing collected packages: relaxed\n",
+      "  Attempting uninstall: relaxed\n",
+      "    Found existing installation: relaxed 0.0.6\n",
+      "    Uninstalling relaxed-0.0.6:\n",
+      "      Successfully uninstalled relaxed-0.0.6\n",
+      "Successfully installed relaxed-0.0.7.dev3+g10c271b\n",
       "\u001b[33mWARNING: You are using pip version 21.1.2; however, version 21.3.1 is available.\n",
       "You should consider upgrading via the '/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
@@ -57,19 +55,22 @@
     }
    ],
    "source": [
-    "%pip install -r requirements.txt"
+    "%pip install git+http://github.com/gradhep/relaxed.git"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import relaxed\n",
+    "from relaxed import fit, infer"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +87,38 @@
     "\n",
     "from typing import Callable, Any\n",
     "\n",
-    "pyhf.set_backend(\"jax\")\n",
+    "from unittest.mock import patch\n",
+    "import sys\n",
+    "\n",
+    "jax_backend = pyhf.tensor.jax_backend(precision=\"64b\")\n",
+    "pyhf.set_backend(jax_backend)\n",
     "\n",
     "\n",
+    "@patch(\"pyhf.default_backend\", new=jax_backend)\n",
+    "@patch.object(\n",
+    "    sys.modules[\"pyhf.interpolators.code0\"], \"default_backend\", new=jax_backend\n",
+    ")\n",
+    "@patch.object(\n",
+    "    sys.modules[\"pyhf.interpolators.code1\"], \"default_backend\", new=jax_backend\n",
+    ")\n",
+    "@patch.object(\n",
+    "    sys.modules[\"pyhf.interpolators.code2\"], \"default_backend\", new=jax_backend\n",
+    ")\n",
+    "@patch.object(\n",
+    "    sys.modules[\"pyhf.interpolators.code4\"], \"default_backend\", new=jax_backend\n",
+    ")\n",
+    "@patch.object(\n",
+    "    sys.modules[\"pyhf.interpolators.code4p\"], \"default_backend\", new=jax_backend\n",
+    ")\n",
+    "@patch.object(\n",
+    "    sys.modules[\"pyhf.modifiers.shapefactor\"], \"default_backend\", new=jax_backend\n",
+    ")\n",
+    "@patch.object(\n",
+    "    sys.modules[\"pyhf.modifiers.shapesys\"], \"default_backend\", new=jax_backend\n",
+    ")\n",
+    "@patch.object(\n",
+    "    sys.modules[\"pyhf.modifiers.staterror\"], \"default_backend\", new=jax_backend\n",
+    ")\n",
     "def make_model(pars: jnp.array, bins=2) -> pyhf.Model:\n",
     "    bounded_pars_upper = jnp.where(pars > 10.0, 10.0, pars)\n",
     "    bounded_pars = jnp.where(bounded_pars_upper < -10.0, -10.0, bounded_pars_upper)\n",
@@ -139,7 +169,13 @@
     "            }\n",
     "        ]\n",
     "    }\n",
-    "    return pyhf.Model(m, validate=False)\n",
+    "    return pyhf.Model(m)\n",
+    "\n",
+    "\n",
+    "def model_and_bonlypars(pars: jnp.array) -> tuple(pyhf.Model, jnp.array):\n",
+    "    m = make_model(pars)\n",
+    "    bonly_pars = jnp.array(m.config.suggested_init()).at[m.config.poi_index].set(0.0)\n",
+    "    return m, bonly_pars\n",
     "\n",
     "\n",
     "def fisher_info_covariance(\n",
@@ -193,14 +229,21 @@
     "\n",
     "\n",
     "def metrics(\n",
-    "    bestfit_pars: jnp.array, m: pyhf.Model, observed_data: jnp.array\n",
+    "    bestfit_pars: jnp.array,\n",
+    "    m: pyhf.Model,\n",
+    "    observed_data: jnp.array,\n",
+    "    diff_pars: jnp.ndarray,\n",
     ") -> jnp.array:\n",
     "    cov_approx = fisher_info_covariance(bestfit_pars, m, observed_data)\n",
     "    mu_idx, y_idx = m.config.par_order.index(\"mu\"), m.config.par_order.index(\"bkguncrt\")\n",
     "    mu_uncert2 = cov_approx[mu_idx, mu_idx]\n",
     "    pull_width_metric2 = (1 - cov_approx[y_idx, y_idx]) ** 2\n",
     "    gaussianity = model_gaussianity(m, bestfit_pars, cov_approx, observed_data)\n",
-    "    cls_obs = pyhf.infer.hypotest(1.0, observed_data, m, init_pars=[0.0, 0.0])\n",
+    "\n",
+    "    bonly_pars = jnp.array(m.config.suggested_init()).at[m.config.poi_index].set(0.0)\n",
+    "\n",
+    "    cls_fn = infer.make_hypotest(model_and_bonlypars)\n",
+    "    cls_obs = cls_fn(diff_pars, 1.0)[\"CLs\"]\n",
     "\n",
     "    return dict(\n",
     "        cls_obs=cls_obs,\n",
@@ -213,14 +256,46 @@
     "def pipeline(pars: jnp.array, observed_data: jnp.array) -> jnp.array:\n",
     "    m = make_model(pars)\n",
     "    data = jnp.concatenate((observed_data, jnp.array(m.config.auxdata)))\n",
-    "    mle_pars = pyhf.infer.mle.fit(data, m, init_pars=[0.0, 0.0])\n",
     "\n",
-    "    return jnp.array(list(metrics(mle_pars, m, data).values()))"
+    "    mle_pars = fit.global_fit(model_and_bonlypars)(jnp.array([0.0, 0.0]), pars)\n",
+    "\n",
+    "    return jnp.array(list(metrics(mle_pars, m, data, pars).values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/.local/lib/python3.8/site-packages/jax/lib/xla_bridge.py:125: UserWarning: No GPU/TPU found, falling back to CPU.\n",
+      "  warnings.warn('No GPU/TPU found, falling back to CPU.')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[0.        , 0.00103341],\n",
+       "             [0.        , 0.00315274],\n",
+       "             [0.        , 0.00443595],\n",
+       "             [0.03730843, 0.02128992]], dtype=float64)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.jacrev(pipeline)(jnp.array([1.0, 1.0]), jnp.array([50.0, 50.0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -247,8 +322,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-76-6c3c30e3609d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-76-6c3c30e3609d>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-16-6c3c30e3609d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-16-6c3c30e3609d>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: pipeline() missing 1 required positional argument: 'observed_data'"
      ]
     }
