--- a/example.ipynb
+++ b/example.ipynb
@@ -2,73 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Looking in links: https://storage.googleapis.com/jax-releases/jax_releases.html\n",
-      "Collecting git+http://github.com/scikit-hep/pyhf.git@diffable_json (from -r requirements.txt (line 5))\n",
-      "  Cloning http://github.com/scikit-hep/pyhf.git (to revision diffable_json) to /tmp/pip-req-build-gl5t8x8n\n",
-      "  Running command git clone -q http://github.com/scikit-hep/pyhf.git /tmp/pip-req-build-gl5t8x8n\n",
-      "  Running command git checkout -b diffable_json --track origin/diffable_json\n",
-      "  Switched to a new branch 'diffable_json'\n",
-      "  Branch 'diffable_json' set up to track remote branch 'diffable_json' from 'origin'.\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting jax==0.1.71\n",
-      "  Using cached jax-0.1.71-py3-none-any.whl\n",
-      "Collecting jaxlib==0.1.50\n",
-      "  Using cached https://storage.googleapis.com/jax-releases/nocuda/jaxlib-0.1.50-cp38-none-manylinux2010_x86_64.whl (32.5 MB)\n",
-      "Requirement already satisfied: relaxed in /home/jovyan/.local/lib/python3.8/site-packages (from -r requirements.txt (line 4)) (0.0.1)\n",
-      "Requirement already satisfied: jsonschema>=3.2.0 in /usr/local/lib/python3.8/dist-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (3.2.0)\n",
-      "Requirement already satisfied: jsonpatch in /home/jovyan/.local/lib/python3.8/site-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (1.32)\n",
-      "Requirement already satisfied: pyyaml in /usr/local/lib/python3.8/dist-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (5.4.1)\n",
-      "Requirement already satisfied: click>=6.0 in /usr/local/lib/python3.8/dist-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (7.1.2)\n",
-      "Requirement already satisfied: scipy>=1.4.0 in /usr/local/lib/python3.8/dist-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (1.7.0)\n",
-      "Requirement already satisfied: tqdm in /home/jovyan/.local/lib/python3.8/site-packages (from pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (4.62.3)\n",
-      "Requirement already satisfied: absl-py in /usr/local/lib/python3.8/dist-packages (from jax==0.1.71->-r requirements.txt (line 2)) (0.10.0)\n",
-      "Requirement already satisfied: numpy>=1.12 in /usr/local/lib/python3.8/dist-packages (from jax==0.1.71->-r requirements.txt (line 2)) (1.21.0)\n",
-      "Requirement already satisfied: opt-einsum in /home/jovyan/.local/lib/python3.8/site-packages (from jax==0.1.71->-r requirements.txt (line 2)) (3.3.0)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (0.17.3)\n",
-      "Requirement already satisfied: setuptools in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (57.0.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (21.2.0)\n",
-      "Requirement already satisfied: six>=1.11.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=3.2.0->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (1.15.0)\n",
-      "Requirement already satisfied: jsonpointer>=1.9 in /home/jovyan/.local/lib/python3.8/site-packages (from jsonpatch->pyhf==0.5.1.dev11->-r requirements.txt (line 5)) (2.1)\n",
-      "Installing collected packages: jaxlib, jax\n",
-      "  Attempting uninstall: jaxlib\n",
-      "    Found existing installation: jaxlib 0.1.73\n",
-      "    Uninstalling jaxlib-0.1.73:\n",
-      "      Successfully uninstalled jaxlib-0.1.73\n",
-      "  Attempting uninstall: jax\n",
-      "    Found existing installation: jax 0.2.24\n",
-      "    Uninstalling jax-0.2.24:\n",
-      "      Successfully uninstalled jax-0.2.24\n",
-      "Successfully installed jax-0.1.71 jaxlib-0.1.50\n",
-      "\u001b[33mWARNING: You are using pip version 21.1.2; however, version 21.3.1 is available.\n",
-      "You should consider upgrading via the '/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [],
@@ -254,9 +187,10 @@
     }
    ],
    "source": [
-    "values = np.array(\n",
-    "    [pipeline(jnp.array(a)) for a in np.vstack([uv.ravel(), dv.ravel()]).T]\n",
-    ")"
+    "obs_data = jnp.array([50.0, 50.0, 50.0])\n",
+    "pipe = partial(pipeline, observed_data=obs_data)\n",
+    "\n",
+    "values = np.array([pipe(jnp.array(a)) for a in np.vstack([uv.ravel(), dv.ravel()]).T])"
    ]
   },
   {
